--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@headlessui/react": "^0.3.1",
     "@loadable/component": "^5.14.1",
+    "@sentry/react": "^6.2.5",
+    "@sentry/tracing": "^6.2.5",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/aspect-ratio": "^0.2.0",
