--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "@loadable/component": "^5.14.1",
     "@sentry/react": "^6.2.5",
     "@sentry/tracing": "^6.2.5",
