--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
     "@loadable/component": "^5.14.1",
-    "@sentry/react": "^6.2.5",
-    "@sentry/tracing": "^6.2.5",
+    "@sentry/react": "^6.3.1",
+    "@sentry/tracing": "^6.3.1",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/aspect-ratio": "^0.2.0",
@@ -41,7 +41,7 @@
     "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "logrocket": "^1.0.15",
+    "logrocket": "^1.0.16",
     "logrocket-react": "^4.0.1",
     "moment": "^2.29.1",
     "next": "^10.0.7",
@@ -64,7 +64,7 @@
     "react-password-strength-bar": "^0.3.3",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
-    "react-resize-detector": "^6.6.5",
+    "react-resize-detector": "^6.7.0-rc.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.9",
     "react-transition-group": "^4.4.1",
@@ -78,15 +78,15 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
+    "@babel/core": "^7.13.16",
     "@babel/preset-react": "^7.12.13",
-    "@storybook/addon-actions": "^6.2.8",
-    "@storybook/addon-essentials": "^6.2.8",
-    "@storybook/addon-links": "^6.2.8",
-    "@storybook/cli": "^6.2.8",
-    "@storybook/node-logger": "^6.2.8",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/cli": "^6.2.9",
+    "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.8",
+    "@storybook/react": "^6.2.9",
     "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
@@ -97,7 +97,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-require": "^3.1.3",
     "node-sass": "^5.0.0",
-    "postcss": "^8.2.10",
+    "postcss": "^8.2.12",
     "react-is": "^17.0.1",
     "styled-jsx-plugin-sass": "^1.0.0",
     "tailwindcss": "^2.0.3",
