--- a/frontend/public/data/settings-pages.json
+++ b/frontend/public/data/settings-pages.json
@@ -6,8 +6,7 @@
       {
         "title": "Go Back to Sites",
         "slug": "go-back-to-sites",
-        "url": "/",
-        "icon": "M10 19l-7-7m0 0l7-7m-7 7h18"
+        "url": "/"
       }
     ]
   },
@@ -22,14 +21,17 @@
       {
         "title": "Profile Settings",
         "slug": "profile-settings",
-        "url": "/settings/profile",
-        "icon": "M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+        "url": "/settings/profile"
       },
       {
         "title": "Subscription Plans",
         "slug": "subscription-plans",
-        "url": "/settings/subscription-plans",
-        "icon": "M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z"
+        "url": "/settings/subscription-plans"
+      },
+      {
+        "title": "Billing Settings",
+        "slug": "billing-settings",
+        "url": "/settings/billing"
       }
     ]
   },
@@ -40,14 +42,12 @@
       {
         "title": "Global Settings",
         "slug": "global-settings",
-        "url": "/settings/global",
-        "icon": "M10 18a8 8 0 100-16 8 8 0 000 16zM4.332 8.027a6.012 6.012 0 011.912-2.706C6.512 5.73 6.974 6 7.5 6A1.5 1.5 0 019 7.5V8a2 2 0 004 0 2 2 0 011.523-1.943A5.977 5.977 0 0116 10c0 .34-.028.675-.083 1H15a2 2 0 00-2 2v2.197A5.973 5.973 0 0110 16v-2a2 2 0 00-2-2 2 2 0 01-2-2 2 2 0 00-1.668-1.973z"
+        "url": "/settings/global"
       },
       {
         "title": "Help and Support",
         "slug": "help-support",
-        "url": "/settings/support",
-        "icon": "M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z"
+        "url": "/settings/support"
       }
     ]
   }
