Fix aws region spec

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,8 +89,7 @@ services:
     image: crawl-app-uptimer
     volumes:
       - ./go:/app
-    environment:
-      - BACKEND_TOKEN=981b9c2848263ece99d67a10414eeea477a34297
+    # environment:
     #   - LOG_SQL=true
   verifier:
     build:
