--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_SENTRY_URL=https://sentry.io/organizations/epic-design-labs/
+NEXT_PUBLIC_SENTRY_URL=https://sentry.io/
 NEXT_PUBLIC_SENTRY_DSN=https://0f57a311ac1b4bc38f7ebae7c1a890df@o432365.ingest.sentry.io/5702974
 NEXT_PUBLIC_SENTRY_ORG=epic-design-labs
 NEXT_PUBLIC_SENTRY_PROJECT=sitecrawler-frontend
