Fix docker setup for frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,15 @@
 FROM node:14 AS dev
 
-RUN mkdir /app
 WORKDIR /app
 
-COPY package*.json ./
-COPY yarn.lock ./
-RUN yarn install
+COPY package.json .
+COPY yarn.lock .
+RUN yarn install --install-lockfile
 
 COPY . .
 
-EXPOSE 3000 3030
-
-
-# build prod assets
 FROM dev AS prod
 
-RUN yarn run build
+RUN yarn build
 
 CMD yarn start
