--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/line-clamp": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
-    "apexcharts": "^3.27.1",
+    "apexcharts": "3.26.1",
     "axios": "^0.21.1",
     "bytes": "^3.1.0",
     "concurrently": "^6.0.2",
