--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ name: CI
 on:
   push:
     branches: [ master ]
+  workflow_dispatch:
 
 concurrency: deploy
 jobs:
@@ -43,7 +44,8 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
-  deploy:
+
+  staging:
     runs-on: ubuntu-latest
     needs: [build_backend, build_frontend, build_go]
     steps:
@@ -59,20 +61,22 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
 
+  production:
+    if: ${{ github.ref == 'refs/heads/master' }}
+    runs-on: ubuntu-latest
+    needs: [staging]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.6'
+
     - name: Deploy to production
       run: make production
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
-  deploy_ecs:
-    runs-on: ubuntu-latest
-    needs: [build_backend, build_frontend, build_go]
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.6'
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -91,6 +95,7 @@ jobs:
         service: prod_crawler_service
         cluster: prod_fargate
         wait-for-service-stability: true
+
     - name: Download reverifier task definition
       run: |
         aws ecs describe-task-definition --task-definition production_cron_reverifier --query taskDefinition > reverifier-task-definition.json
