Update links that direct to sites dashboard page

--- a/frontend/public/data/settings-pages.json
+++ b/frontend/public/data/settings-pages.json
@@ -6,7 +6,7 @@
       {
         "title": "Go Back to Sites",
         "slug": "go-back-to-sites",
-        "url": "/"
+        "url": "/sites"
       }
     ]
   },
